test/scc/ext/tm/semantic-errors/012.t
void test() _Transaction_safe
{
    struct
    {
        volatile int a;
    } *b;
    b->a;
}